# url-parser-cli

./: .eslintrc.json  .gitignore  .goreleaser.yaml  Cargo.toml  cli.js  package.json  readme.md  test.js
.github/workflows/: publish-binaries.yml  test.yml
src/: main.rs
tests/: main.rs
