[package]
name = "url_parser_cli"
version = "4.0.2"
edition = "2021"
authors = ["Jannis R <mail@jannisr.de>"]
repository = "https://github.com/derhuerst/url-parser-cli.git"
homepage = "https://github.com/derhuerst/url-parser-cli"
license = "ISC"
readme = "README.md"
description = "Parse a URL, get one or all components pretty-printed or as JSON."
keywords = ["url", "parse"]
exclude = [".github"]

[dependencies]
atty = "0.2.14"
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.12"
